# ft_printf

./: CMakeLists.txt  Makefile  README.md  a.out
a.out.dSYM/Contents/Resources/DWARF/: a.out
includes/: ft_printf.h
libft/: Makefile
libft/includes/: libft.h
srcs/: ft_printf.c  func_arr.c  initialize.c  long_add.c  long_mult.c  morse.c  pf_dtoa.c  pf_fl.c  pf_fl_int.c  pf_fl_round.c  pf_flag_diez.c  pf_flag_minus.c  pf_flag_zero.c  pf_flags.c  pf_flags_plus_and_space.c  pf_modifier.c  pf_n.c  pf_no_flags.c  pf_putvalue.c  pf_type.c  pf_width.c  print_precision.c  re_initialize.c  test.c
